fixed spacing on standard layout

--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -579,8 +579,8 @@
   }
   
   .main-page-jumbo-video.main-page-jumbo-sub-video {
-    height: 130px;
-    width: 175px;
+    height: 100px;
+    width: 160px;
     box-shadow: 1px 2px 3px rgba(252,248,248,0.5);
     border-radius: 5px;
     filter: brightness(0.9);
@@ -591,8 +591,8 @@
 
   @media (min-width: 576px) {
     .main-page-jumbo-video.main-page-jumbo-sub-video {
-      height: 150px;
-    width: 200px;
+      height: 120px;
+    width: 170px;
     }
   }
   
